kubernetes/apps/app-cluster/argo-system/argo-cd/config/http-route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: argo
  namespace: argo-system
  annotations:
    gethomepage.dev/app: "argocd-server"
    gethomepage.dev/description: "GitOps control plane"
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: "App Cluster - argo-system"
    gethomepage.dev/href: "https://argo.krapulax.dev"
    gethomepage.dev/icon: "argo-cd.png"
    gethomepage.dev/name: "Argo CD"
    gethomepage.dev/weight: "10"
spec:
  parentRefs:
    - name: envoy-external
      namespace: network
      sectionName: https
  hostnames:
    - argo.krapulax.dev
  rules:
    - backendRefs:
        - name: argocd-server
          namespace: argo-system
          port: 80
